working on documentation of the API
