# routes/api.php
@@ -9,5 +9,8 @@ use Illuminate\Support\Facades\Route;
 
 
 // Public routes
-Route::post('/auth/login', [AuthController::class, 'login']);
-Route::post('/auth/register', [AuthController::class, 'register']);
+Route::middleware('api')->group(function () {
+    Route::post('auth/register', [AuthController::class, 'register']);
+    Route::post('auth/login', [AuthController::class, 'login']);
+    Route::get('auth/me', [AuthController::class, 'me'])->middleware('auth:api');
+});
